src/objects/CH_WorkgroupInstructions__c.object
<CustomObject>
    <fields>
        <fullName>CH_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_AssignmentType__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Case Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Severity__c</fullName>
        <label>Severity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Severity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_WorkgroupInstructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Workgroup Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <label>Workgroup</label>
        <referenceTo>CH_Workgroup__c</referenceTo>
        <relationshipLabel>Workgroup Instructions</relationshipLabel>
        <relationshipName>Workgroup_Instructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workgroup Instruction</label>
    <nameField>
        <displayFormat>WI-{00000}</displayFormat>
        <label>Instruction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workgroup Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CH_SeverityCheck</fullName>
        <active>true</active>
        <description>This rule is used to check the severity values for Active assignment type</description>
        <errorConditionFormula>AND( ISPICKVAL( CH_AssignmentType__c , &quot;Active&quot;), ISBLANK( CH_Severity__c ),  CH_Active__c == true )</errorConditionFormula>
        <errorDisplayField>CH_Severity__c</errorDisplayField>
        <errorMessage>Please enter the severity value.</errorMessage>
    </validationRules>
</CustomObject>