src/objects/CH_WorkgroupInstructions__c/validationRules/CH_SeverityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_SeverityCheck</fullName>
    <active>true</active>
    <description>This rule is used to check the severity values for Active assignment type</description>
    <errorConditionFormula>AND( ISPICKVAL( CH_AssignmentType__c , &quot;Active&quot;), ISBLANK( CH_Severity__c ),  CH_Active__c == true )</errorConditionFormula>
    <errorDisplayField>CH_Severity__c</errorDisplayField>
    <errorMessage>Please enter the severity value.</errorMessage>
</ValidationRule>